syntax = "proto3";

package trisads;
option go_package = "github.com/trisacrypto/testnet/pkg/trisads/pb";

import "ivms101/ivms101.proto";

// VASP represents the top-level directory entry for certificate public key exchange.
// The TRISA Directory service allows search and lookup of VASP entries and returns
// TRISA implementation details and certificate key material. VASPs must be registered
// with IVMS 101 identity data for the business entity as well as natural person
// entities for technical, legal, billing, and administrative contacts.
message VASP {
    // A unique identifier generated by the directory service, should be a globally
    // unique identifier partitioned specified by the registered directory field.
    string id = 1;

    // The url of directory that registered this VASP, e.g. vaspdirectory.net. The
    // id of the VASP must must be unique with respect to this field.
    string registered_directory = 2;

    // The legal entity IVMS 101 data for VASP KYC information exchange. This is the
    // IVMS 101 data that should be exchanged in the TRISA P2P protocol as the
    // Originator, Intermediate, or Beneficiary VASP fields. A complete and valid
    // identity record with country of registration is required.
    ivms101.LegalPerson entity = 3;

    // Technical, legal, billing, and administrative contacts for the VASP.
    Contacts contacts = 4;

    // Certificate information and public key material issued to the VASP to facilitate
    // mTLS connections between TRISA partners. If the VASP has not been verified then
    // the certificate will not be issued. This field is the most recently issued
    // certificate but may or may not be revoked.
    Certificate certificate = 5;

    // Domain name of the TRISA endpoint used as the common name for the certificate.
    // This field must be unique per VASP as it identifies the Certificate and is used
    // directly in lookups.
    string common_name = 6;

    // Travel Rule Implementation Endpoint - where other TRISA peers should connect.
    // This should be an addr:port combination, e.g. trisa.vaspbot.net:443
    string trisa_endpoint = 7;

    // Business Information
    string website = 8;
    BusinessCategory business_category = 9;
    VASPCategory vasp_category = 10;
    string established_on = 11; // Should be a date in YYYY-MM-DD format

    // TRIXO Questionnaire
    TRIXOQuestionnaire trixo = 12;

    // Directory Service Metadata
    VerificationState verification_status = 13;
    ServiceState service_status = 14;
    string verified_on = 15;  // Should be an RFC 3339 Timestamp
    string first_listed = 16; // Should be an RFC 3339 Timestamp
    string last_updated = 17; // Should be an RFC 3339 Timestamp

    // The legal entity signature that is used to verify uniqueness or detect changes.
    bytes signature = 18;

    // Version is used for anti-entropy based replication
    uint64 version = 19;

    // Temporary: verification token for light weight authentication for verification
    // TODO: replace with admin API that uses authentication
    string admin_verification_token = 20;

    // Maintains the status of a Sectigo certificate request.
    // NOTE: this field contains an encrypted PKCS12 password, which should not be replicated
    CertificateRequest certificate_request = 21;
}

// At least one of the following contact information is required for the VASP to be
// registered in a TRISA directory. Contact information should be kept private in the
// directory service and only used for email communication or verification.
message Contacts {
    Contact technical = 1;
    Contact administrative = 2;
    Contact legal = 3;
    Contact billing = 4;
}

message Contact {
    // Name is required to identify and address the contact
    string name = 1;

    // An email address is required for all contacts
    string email = 2;

    // Phone number is optional, but it is strongly suggested
    string phone = 3;

    // Token for email verification
    bool verified = 4;
    string token = 5;

    // Optional KYC data if required for the directory service contact.
    ivms101.NaturalPerson person = 6;
}

message TRIXOQuestionnaire {
    // Should be the name of the country or an ISO-3166-1 code.
    string primary_national_jurisdiction = 1;

    // Name of primary financial regulator or supervisory authority.
    string primary_regulator = 2;

    // Is the VASP permitted to send and/or receive transfers of virtual assets in the
    // jurisdictions in which it operates?
    // One of yes, no, partially
    string financial_transfers_permitted = 3;

    // Other jurisdictions in which the entity operates.
    repeated Jurisdiction other_jurisdictions = 4;

    // Does the VASP have a programme that sets minimum AML, CFT, KYC/CDD and sanctions
    // standards per the requirements of the jurisdiction(s) regulatory regimes where
    // it is licensed/approved/registered?
    // Either yes or no
    string has_required_regulatory_program = 5;

    // Does the VASP conduct KYC/CDD before permitting its customers to send/receive
    // virtual asset transfers?
    bool conducts_customer_kyc = 6;

    // At what threshold does the VASP conduct KYC?
    float kyc_threshold = 7;

    // Is the VASP required to comply with the application of the Travel Rule standards
    // in the jurisdiction(s) where it is licensed/approved/registered?
    bool must_comply_travel_rule = 8;

    // Applicable Travel Regulations the VASP must comply with.
    repeated string applicable_regulations = 9;

    // What is the minimum threshold for travel rule compliance?
    float compliance_threshold = 10;

    // Is the VASP required by law to safeguard PII?
    bool must_safeguard_pii = 11;

    // Does the VASP secure and protect PII, including PII received from other VASPs
    // under the Travel Rule? (yes/no)
    string safeguards_pii = 12;
}

message Jurisdiction {
    string country = 1;
    string regulator_name = 2;
    string license_number = 3;
}

message Certificate {
    uint64 id = 1;
    Name subjectName = 2;
    Name issuerName = 3;
    bytes serialNumber = 4;
    string version = 5;
    string signatureAlgorithm = 6;
    repeated string parameters = 7;
    string notValidBefore = 8;
    string notValidAfter = 9;
    PublicKeyInfo PublicKeyInfo = 10;
    bool revoked = 11;
}

message Name {
    uint64 id = 1;
    string commonName = 2;
    string countryRegion = 3;
    string organization = 4;
    string organizationalUnit = 5;
    string locality = 6;
    string stateProvince = 7;
    string serialNumber = 8;
    string incCountryRegion = 9;
    string incStateProvince = 10;
    string businessCategory = 11;
}

message PublicKeyInfo {
    uint64 id = 1;
    string algorithm = 2;
    repeated string parameters = 3;
    bytes publicKey = 4;
    int64 exponent = 5;
    int64 keySize = 6;
    repeated string keyUsage = 7;
    bytes signature = 8;
}

message CertificateRequest {
    // Sectigo create single certificate batch metadata
    int64 batch_id = 1;
    int64 order_number = 2;
    string creation_date = 3;
    string profile = 4;
    string batch_name = 5;
    string status = 6;
    bool active = 7;
    string reject_reason = 8;

    // Currently there is no choice but to store the PKCS12 password on the server
    // because the certificate issuance command is separated in time by human review,
    // which means it cannot be ephemerally kept in memory during the certificate
    // generation request handoff. Moreover, the value cannot be hashed since it must
    // be sent in plaintext via the Sectigo API. To mitigate issues with the storage of
    // this data, it is encrypted so that only a directory service with the correct
    // secret key (e.g. the directory service process that created the request) can read
    // the original value. However, if possible, this value should not be replicated.
    bytes pkcs12password = 9;
    bytes pkcs12signature = 10;
}

enum BusinessCategory {
    UNKNOWN_ENTITY = 0;
    PRIVATE_ORGANIZATION = 1;
    GOVERNMENT_ENTITY = 2;
    BUSINESS_ENTITY = 3;
    NON_COMMERCIAL_ENTITY = 4;
}

enum VASPCategory {
    UNKNOWN_VASP = 0;
    ATM = 1;
    EXCHANGE = 2;
    HIGH_RISK_EXCHANGE = 3;
}

enum VerificationState {
    NO_VERIFICATION = 0;
    SUBMITTED = 1;
    EMAIL_VERIFIED = 2;
    PENDING_REVIEW = 3;
    REVIEWED = 4;
    ISSUING_CERTIFICATE = 5;
    VERIFIED = 6;
    REJECTED = 7;
    APPEALED = 8;
    ERRORED = 9;
}

enum ServiceState {
    UNKNOWN = 0;
    HEALTHY = 1;
    UNHEALTHY = 2;
    DANGER = 3;
    OFFLINE = 4;
}